Fix icon position on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,8 +27,15 @@
     }
 }
 
-.logo {
-  margin-right: 15px;
+@media (min-width: 768px) {
+  .logo {
+    margin-right: 15px;
+  }
+}
+@media (max-width: 768px) {
+  .logo {
+    margin-left: 15px;
+  }
 }
 .navbar-inverse .logo {
   filter: invert(100%);
